[package]
name = "projections"
version = "0.1.0"
authors = ["Alexander Dikelsky <alexander.dikelsky@gmail.com>"]
edition = "2018"

[lib]
crate-type=["cdylib"]

[dependencies]
plotters = "^0.2.15"
wasm-bindgen = "0.2.62"
wee_alloc = "0.4.5"
web-sys = { version = "0.3.39", features = ["HtmlCanvasElement"] }

[profile.release]
lto = true
